# simple-slam

./: CMakeLists.txt  README.md  package.xml
config/: simple_slam_2d.yaml  simple_slam_bag_2d.yaml
docs/: config_reference.md  development_notes.md
include/simple_slam/: simple_slam_node.hpp  types.hpp
include/simple_slam/backend/: pose_graph_backend.hpp
include/simple_slam/frontend/: local_slam_frontend.hpp
include/simple_slam/mapping/: submap_2d.hpp
include/simple_slam/optimization/: pose_graph_2d.hpp
include/simple_slam/system/: system_mode.hpp
launch/: simple_slam.launch.py
rviz/: simple_slam.rviz
src/: simple_slam_node.cpp  simple_slam_node_main.cpp
src/backend/: pose_graph_backend.cpp
src/frontend/: local_slam_frontend.cpp
src/mapping/: submap_2d.cpp
src/optimization/: pose_graph_2d.cpp
