<?xml version="1.0"?>
<package format="3">
  <name>simple_slam</name>
  <version>0.0.1</version>
  <description>Incremental 2D SLAM package scaffold for ROS 2.</description>
  <maintainer email="zwc@example.com">zwc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
